Добавил авторизацию в Swagger
