# storage/api-docs/api-docs.json
@@ -220,7 +220,12 @@
                             }
                         }
                     }
-                }
+                },
+                "security": [
+                    {
+                        "sanctum": []
+                    }
+                ]
             }
         },
         "/posts/{id}": {
@@ -276,7 +281,12 @@
                     "401": {
                         "description": "Пользователь не авторизован"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "sanctum": []
+                    }
+                ]
             }
         }
     },
